feat: adding sincronization with jsons usuarios